2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Convert.cs:
	* MdbObjectValueAdaptor.cs: Improve support for nullable
	  types.

2009-10-02  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Notify the started event before starting
	  the session. In this way, breakpoints will be inserted
	  before reaching main. Fixes bug #541727 - Debugger never
	  stops at the breakpoint.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* ArrayAdaptor.cs: CreateElementValue is not required anymore.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Don't show compiler generated
	  fields.

2009-09-23  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Implemented CreateValue. Fixed
	  resolution of nested types in GetType(name).

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Add support for
	  DebuggerTypeProxyAttribute, DebuggerBrowsable and
	  DebuggerDisplayAttribute.

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Add support for examining nested
	  types.

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Remove debug code.

2009-09-22  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Watch the parent process, and stop the
	  server if the parent dies.

	* MdbObjectValueAdaptor.cs: Fix incorrect check for
	  AllowTargetInvoke.

2009-09-17  Lluis Sanchez Gual  <lluis@novell.com>

	* DebuggerServer.cs: Properly parse quoted arguments. Fixes
	  bug #539317 - NUnit addin fails to run tests under the
	  debugger.

2009-09-17  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbAdaptor.cs:
	* MdbAdaptor-2-0.cs:
	* DebuggerServer.cs:
	* MdbAdaptor-2-4-2.cs:
	* MdbAdaptor-2-4-4.cs: Implemented AllowBreakEventChanges
	  property.

2009-09-14  Lluis Sanchez Gual  <lluis@novell.com>

	* MdbObjectValueAdaptor.cs: Added some checks for
	  AllowTargetInvoke flag. When resolving a method, in case of